# resources

./: atlantic.version  docker-compose.yml  docker-entrypoint.sh  dockerfile  mainnet.version
.kiro/settings/: mcp.json
atlantic/: VERSION  docker-compose.yml  docker-entrypoint.sh  dockerfile
atlantic/24c96g/conf/: compute.conf  controller.conf  cubenet.conf  genesis.pharos-node.conf  global.conf  mygrid.conf.json  pharos.tpl.conf  portal.conf  txpool.conf
atlantic/64cUnlimited/conf/: aldaba.tpl.conf  controller.conf  cubenet.conf  genesis.tpl.conf  mygrid.conf.json  pharos.tpl.conf
atlantic/conf/: archive.conf  docker-archive.conf  docker-full.conf  full.conf  traceDB.conf
atlantic/scripts/: deploy.light.json  docker-entrypoint.sh  start.sh
atlantic/scripts/pharos-ops/: .env  asserts.py  main.py  setup.cfg
mainnet/64cUnlimited/conf/: txpool.conf
mainnet/atlantic/: meta_tool_config.py
mainnet/atlantic/scripts/: ops_prepare.sh
mainnet/scripts/: start.sh
testnet/: VERSION  dockerfile  genesis.demo.conf
testnet/24c96g/conf/: controller.conf  cubenet.conf  (+13 more)
testnet/conf/: .portal.conf.swp  controller.conf  cubenet.conf  genesis.tpl.conf  mygrid.conf.json  mygrid.conf.json.bak  perf.conf  storage.conf
testnet/scripts/: .ll  .python-version  deploy.light.json  install_ops.sh  start.sh
testnet/scripts/aldaba-ops/: README.md  demo.json  demo.light.json  demo_remote.json  demo_remote.light.json  deploy.json  deploy.light.json  domain0.json  domain1.json  domain2.json  flow.json  main.py  requirements.txt  setup.cfg  setup.py
testnet/scripts/aldaba-ops/aldaba_ops/: cli.py
testnet/scripts/aldaba-ops/aldaba_ops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
testnet/scripts/aldaba-ops/aldaba_ops/test_runner/: bvt.py  context.py  systest.py  utils.py
testnet/scripts/aldaba-ops/aldaba_ops/toolkit/: aldaba.py  command.py  common_types.py  compose.py  conf.py  config.py  configure.py  conn_group.py  connect.py  const.py  core.py  entrance.py  logs.py  registry.py  schema.py  svc.py  template.py  utils.py  validate.py
testnet/scripts/aldaba-ops/aldaba_ops/toolkit/schemas/: deploy.py  domain.py
testnet/scripts/aldaba-ops/resource/: deploy.json  deploy.light.json  domain0.json  domain0.light.json  prepare.sh
(+231 files in other folders)
