# Here's a link about setup.cfg
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
# Project name, the project name will be used while publishing and installing
name = aldaba_ops
# Author's name and email address
author = youxing
author_email = youxing.zys@antgroup.com
# Project version, versions only above than 1.0 will assumed as a released version.
# When modifying project version to above than 1.0, here's the rules should be followed.
# http://wiki.baidu.com/pages/viewpage.action?pageId=469686381
version = 1.0.0-rc2
# A brief introduction about the project, ANY NON-ENGLISH CHARACTER IS NOT SUPPORTED!
description = aldaba2.0 operation tool
# A longer version of introduction abouth the project, you can also include readme, change log, etc. .md or rst file is recommended.
long_description = long_description
long_description_content_type = text/markdown
# Main page of the project, usually the project's icode page, you can set to its wiki or other documents url instead.
home_page = https://code.alipay.com/mychain/aldaba_ops
# License, you can ignore this if the project is not going to open source to the public.
license = MIT
# Project type, you can ignore this if the project is not going to open source to the public.
# Choose the right field to fulfill from PyPI's official list.
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Development Status :: 1 - Alpha
    Intended Audience :: Developers
    Natural Language :: English
    Topic :: Software Development :: Build Tools
    License :: ANT_FIN :: ANT_FIN_GROUP
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
# keywords, used for indexing, easier to search for other users if they are interested of your project.
keywords =
   aldaba
   tools

[options]
# directory for unit test
test_suite = tests
# You can run zip source code for plain python project
zip_safe = False

# You can set this configuration to let users run directly the main entrance function
[options.entry_points]
console_scripts =
   aldaba-ops = aldaba_ops.cli:cli